MPSSPRT-388 another round of manual log4j.LogManager refactoring